public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  color: #545149;
  background-color: #f4f1ec;
  font-size: 24px;
  font-family: "Source Sans 3", sans-serif;
  padding-top: 120px;
}

/*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */

 main {
  width: 90%;
  margin: 0 auto;
  background-color: inherit;
 }


 @media only screen and (min-width: 1024px) {

  body {
    width: 100%;
    display:flex;
    flex-direction: row;
  }
  
  header {
    flex: 1;
    margin: 45px;
  }

  .container {
    flex: 2;
  }

 }

 * { outline: 1px solid red; }

